changed drop down menu
changed icon to chevron down and will open pages for each menu item

--- a/style.css
+++ b/style.css
@@ -66,6 +66,25 @@ h1, h2, h3, h4, h5, h6 {
    
 /* } */
 
+.dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 260px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
 
 .center-column .logo {
     display:flex;
