--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ h1, h2, h3, h4, h5, h6 {
     position: absolute;
     margin-top: 15px;
     margin-left: -15px; */
-}
+/* } */
 
 /* .nav-link2 a:hover .sub-menu-1 {
     display: block;
